# CPP

cartesian_vector_param/: config.h  main.cpp  vector.cpp  vector.hh
cartesian_vector_variable/: CMakeLists.txt  REVIEW_35.txt  vector.cc  vector.hh
find_motive/: CMakeLists.txt  REVIEW_36.txt  main.cpp  sources.cpp  sources.h
is_prime_motive/: CMakeLists.txt  main  main.cpp  sources.cpp  sources.h
is_prime_prog/: CMakeLists.txt  REVIEW_36.txt  main.cpp  sources.cpp  sources.h
selection_sort/: CMakeLists.txt
selection_sort_file/: CMakeLists.txt  my_sort.hpp  sort_file.hpp
selection_sort_file_meta/: CMakeLists.txt  my_sort.hpp  sort_file.hpp
set_functions/: CMakeLists.txt  main.cc  set_operations.hpp
